--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -12,3 +12,4 @@ include::Rank-API.adoc[]
 include::Role-API.adoc[]
 include::Major-API.adoc[]
 include::Member-API.adoc[]
+include::MemberLeaveAbsence-API.adoc[]
